--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>me.alpho320.fabulous.core</groupId>
     <artifactId>FabulousFarm</artifactId>
     <version>1.0.1</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>common</module>
+        <module>bukkit</module>
+    </modules>
 
     <repositories>
         <repository>
