--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>me.alpho320.fabulous.core</groupId>
+        <groupId>me.alpho320.fabulous</groupId>
         <artifactId>FabulousFarm</artifactId>
         <version>1.0.1</version>
     </parent>
@@ -116,6 +116,13 @@
             <groupId>com.github.FabulousProject.FabulousCore</groupId>
             <artifactId>bukkit</artifactId>
             <version>1.1.58</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>me.alpho320.fabulous</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0.1</version>
             <scope>compile</scope>
         </dependency>
 
