--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>me.alpho320.fabulous.core</groupId>
+        <groupId>me.alpho320.fabulous</groupId>
         <artifactId>FabulousFarm</artifactId>
         <version>1.0.1</version>
     </parent>
