now hooks more flexible, add condition of BlockSkyLightLevelCondition, fix some farm checks.

--- a/bukkit/src/main/resources/crops/tomato.yml
+++ b/bukkit/src/main/resources/crops/tomato.yml
@@ -28,6 +28,8 @@ Crop:
         - 'AUTUMN'
     water:
       value: 1
+    sky-light:
+      value: 5
 
   stages:
     '1': # must be start with 1
